# Sign_Detection

./: CMakeLists.txt
build2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Project.sln  Project.vcxproj  Project.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build2/.cmake/api/v1/reply/: cache-v2-b9095ffe433bcabd0209.json  cmakeFiles-v1-c5f5ab14c66bcf370a45.json  codemodel-v2-27bff6a6a314e24e7f8c.json  index-2023-06-09T14-32-20-0934.json  target-ALL_BUILD-Release-869d305ff21460fa4676.json  target-Project-Debug-7e07114c12d6f921e00a.json  target-Project-MinSizeRel-2513d382ddf83bb82b75.json  target-Project-RelWithDebInfo-28955d841f7ab21ef610.json  target-Project-Release-bd25d43a514b97371749.json  target-ZERO_CHECK-Debug-471952650aea80ecc15f.json  (+1 more)
build2/Debug/: Project.ilk
build2/Project.dir/Debug/: Project.exe.recipe
build2/Project.dir/Debug/Project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build2/Project.dir/Release/: Project.exe.recipe
build2/Project.dir/Release/Project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build2/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build2/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build2/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build2/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
include/: CvControl.hpp  processes.hpp  vc.h
src/: CvControl.cpp  main.cpp  processes.cpp  vc.c
(+6 files in other folders)
